--- a/AlertaDeChuvas/src/main/resources/application.properties
+++ b/AlertaDeChuvas/src/main/resources/application.properties
@@ -1,14 +1,14 @@
-server.port=8081
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
+server.port=8083
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2
 
 # database configs
 spring.datasource.url=jdbc:mysql://localhost:3306/alerta_chuvas
 spring.datasource.username=root
 spring.datasource.password=
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.testWhileIdle=true
-spring.datasource.validationQuery=SELECT 1
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+#spring.datasource.testWhileIdle=true
+#spring.datasource.validationQuery=SELECT 1
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
